--- a/main.html
+++ b/main.html
@@ -8,8 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="./script.js">       
+
 </script>
+<main>
+    <header>       
+    </header>
+	<nav>
+		<ul>
+			<li> <a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">Home</a></li>
+			<li><a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">About us</a></li>
+				<li><a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">Contact us</li>
+		</ul>
+	</nav>
+</main>
 
 </body>
 
