--- a/main.html
+++ b/main.html
@@ -8,20 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">       
-
-</script>
-<main>
-    <header>       
-    </header>
 	<nav>
-		<ul>
-			<li> <a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">Home</a></li>
-			<li><a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">About us</a></li>
-				<li><a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">Contact us</li>
-		</ul>
+			<ul>
+				<li><a href="https://course.acciojob.com/">Home</a></li>
+				<li><a href='https://acciojob.com/career-guidance-session'>About us</a></li>
+				<li><a href="https://www.chess.com/play/online">Contact us</a></li>
+			</ul> 
 	</nav>
-</main>
+	<h1>3 random videos</h1>
+	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
+    
+		<video src= 'http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4' controls></video>
+    	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
+    
+	<script type="text/javascript" src="./script.js">       
+</script>
+
 
 </body>
 
