--- a/main.html
+++ b/main.html
@@ -15,12 +15,16 @@
 				<li><a href="https://www.chess.com/play/online">Contact us</a></li>
 			</ul> 
 	</nav>
+	<main>
 	<h1>3 random videos</h1>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
+	<video controls  width="400px"><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"/></video>
     
-		<video src= 'http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4' controls></video>
-    	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
+	<video controls width="400px"><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"/></video>
     
+	<video control width="400px"><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"/></video>
+   
+	</main>
+	
 	<script type="text/javascript" src="./script.js">       
 </script>
 
